package card;

public enum TYPE {
    SPELL,
    MONSTER
}
