@startuml
class User{
    -String username
    -int coins
    -int score
    -Stack myStack
    -Deck myDeck
    --Constructor--
    +user(username, password, token)
    --Methods--
    +void selectDeck()
}

class Server{
}

enum TYPE{
    SPELL,
    MONSTER
}

enum ELEMENT{
    WATER,
    FIRE,
    NORMAL
}

class Card{
    -String name
    -int damage
    -bool paused
    -ELEMENT element;
    -TYPE type;
    --Constructor--
  +Card(String name, int damage)
}
class CollectionOfCards{
    -List<Card> myCards;
    --Constructor--
    --Method--
    +void addCard(card chosenCard)
    +void removeCard(card chosenCard)
}
class Deck extends CollectionOfCards{
    --Constructor--
    --Method--
    +void emptyDeck()
}
class Stack extends CollectionOfCards{
    --Constructor--
    --Methods--
    +void addCards(ArrayList<Cards> cards)
}
class ScoreBoard{
    -List<String> winners
    -List<String> losers
    --Constructor--
    --Methods--
    +void addWinnerAndLoser(String winnerName, String loserName)
}

class Battle{
    -int round
    --Constructor--
    --Methods--
    +void chooseDeck(user currentUser)
    +card chooseAttackingCard(user currentUser)
    +bool isCardStronger(card card1, card card2)
    +void gainCard(user cardLosingUser, user cardGainingUser, card changingCard)
    +bool isUserOutOfCards(user user1, user user2)
}

class MonsterBattle extends Battle{

}

class MixBattle extends Battle{
    +bool isCardStrongerWithElements(card card1, card* card2)
}

class Dialogue{
}
class GameControl{
 -user User1
 -user User2
 -battle currentBattle
 -dialogue gameDialogue
 -scoreboard gameScoreboard
 --Constructor--
 --Methods--
 +void playGame()
 +void signInUsers()
 +void visitTradingCenter(String token)
  +card selectCardForTrading(user currentUser)
  +void setUpDemand(int minDamage, String type, String element)
 +void changeProfile(user currentUser)
 +void buyPackages(user currentUser)
  +package generatePackage(String type)
 +void chooseBattle()
 +void startBattle()
  +void updateScores(user* winner, user* loser)
  +void updateScoreboard(String winner, String loser)
}


GameControl --> User
GameControl --> ScoreBoard
GameControl --> Battle
GameControl --> Dialogue

User --> Deck
User --> Stack

Deck --> Card

Stack --> Card

Card --> TYPE
Card --> ELEMENT

@enduml